fix: update font sizes across components for improved responsiveness and readability

--- a/src/app/pages/create-survey/create-survey-publish.scss
+++ b/src/app/pages/create-survey/create-survey-publish.scss
@@ -11,7 +11,7 @@
     background-color: #ffb770;
     border-radius: 10px;
     font-weight: 800;
-    font-size: clamp(1rem, 1.5vh, 2.5rem);
+    font-size: clamp(1.2rem, 0.7rem + 0.8vw, 1.8rem);
     gap: 0.6rem;
 
     img {
