--- a/src/app/pages/create-survey/create-survey-responsive.scss
+++ b/src/app/pages/create-survey/create-survey-responsive.scss
@@ -43,8 +43,7 @@
       padding: 0.8em 1.2em;
       border-radius: 16px;
       color: white;
-      font-size: 1.1rem;
-
+      font-size: clamp(1rem, 0.6rem + 0.2vw, 1.2rem);
       &::before {
         content: 'Cancel';
         font-size: clamp(1rem, 1.4vh, 3rem);
