--- a/src/app/pages/create-survey/create-survey.scss
+++ b/src/app/pages/create-survey/create-survey.scss
@@ -11,6 +11,7 @@
 
     img {
       width: var(--logo-size);
+      height: clamp(3rem, 1rem + 1vw, 3.2rem);
     }
   }
 
@@ -58,7 +59,7 @@
 
   &__title {
     margin: 0;
-    font-size: var(--title-size);
+    font-size: clamp(3rem, 2rem + 2vw, 6rem);
     line-height: 0.85;
   }
 
@@ -185,13 +186,14 @@
   }
 
   &__multiple-choice-option input {
-    width: 1rem;
-    height: 1rem;
+    width: 0.8rem;
+    height: 0.8rem;
     flex-shrink: 0;
   }
 
   &__multiple-answer {
     font-weight: 100;
+    font-size: clamp(0.7rem, 0.2rem + 0.6vh, 1rem);
   }
 
   &__answers {
@@ -331,7 +333,8 @@ legend,
 label {
   color: white;
   font-weight: 600;
-  font-size: clamp(0.8rem, 1.4vh, 1.6rem);
+  // font-size: clamp(0.8rem, 1.4vh, 1.6rem);
+  font-size: clamp(1rem, 0.6rem + 0.6vw, 1.8rem);
 }
 
 @keyframes publish-popup-enter {
