--- a/src/app/pages/survey-detail/survey-detail-responsive.scss
+++ b/src/app/pages/survey-detail/survey-detail-responsive.scss
@@ -8,7 +8,6 @@
     justify-content: center;
     align-items: center;
     padding: 4em 0em 2em 0em;
-    height: 100dvh;
     margin-bottom: 0;
 
     &__header {
@@ -27,19 +26,19 @@
       background-color: #ffb770;
       border-radius: 10px;
       font-weight: 700;
-      font-size: clamp(0.8rem, 1vh, 2rem);
+      font-size: clamp(1rem, 0.5rem + 0.5vw, 1.4rem);
     }
 
     &__cta-icon {
       display: flex;
       align-items: center;
-      width: clamp(1rem, 1vh, 2rem);
+      width: clamp(1.2rem, 2vh, 1.8rem);
     }
 
     &__content {
       display: flex;
       justify-content: center;
-      align-items: baseline;
+      align-items: center;
       gap: 3rem;
     }
 
